Need to wire up all the speakers, use flac.

--- a/pulseaudio-dlna.service
+++ b/pulseaudio-dlna.service
@@ -6,7 +6,7 @@ Type=simple
 User=sonos
 Group=sonos
 PrivateTmp=true
-ExecStart=/bin/bash -c '/usr/bin/dbus-run-session /usr/bin/pulseaudio-dlna --codec=wav --auto-reconnect'
+ExecStart=/bin/bash -c '/usr/bin/dbus-run-session /usr/bin/pulseaudio-dlna --codec=flac --auto-reconnect'
 RestartSec=15
 Restart=on-failure
 
